--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.3.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "framer-motion": "^4.1.17",
     "typescript": "4.8.3"
   }
 }
